perf: performance and messages

--- a/iframe/index.html
+++ b/iframe/index.html
@@ -451,23 +451,25 @@
 					await deleteLinesByNetOnDocumentLayer(CREATE_LINE_NET);
 
 					// 获取输入值
-					const originXValue = parseFloat(originX.value);
-					const originYValue = parseFloat(originY.value);
+					const originXValueMil = parseFloat(originX.value) * MM_TO_MIL;
+					const originYValueMil = parseFloat(originY.value) * MM_TO_MIL;
+					const segmentLengthMil = parseFloat(segmentLength.value) * MM_TO_MIL;
+					const zoomScaleValue = parseFloat(zoomScale.value);
 
 					// 在 PCB 上放置线段
 					await eda.pcb_PrimitiveLine.create(
 						CREATE_LINE_NET,
 						EPCB_LayerId.DOCUMENT,
-						originXValue * MM_TO_MIL,
-						originYValue * MM_TO_MIL,
-						originXValue * MM_TO_MIL + parseFloat(segmentLength.value) * MM_TO_MIL,
-						originYValue * MM_TO_MIL,
+						originXValueMil,
+						originYValueMil,
+						originXValueMil + segmentLengthMil,
+						originYValueMil,
 					);
 
 					eda.sys_Message.showToastMessage('线段已放置，请测量线段长度，测量期间请勿缩放。', ESYS_ToastMessageType.SUCCESS);
 
 					// 执行缩放
-					await eda.dmt_EditorControl.zoomTo(originXValue * MM_TO_MIL, originYValue * MM_TO_MIL, parseFloat(zoomScale.value) / 100);
+					await eda.dmt_EditorControl.zoomTo(originXValueMil, originYValueMil, zoomScaleValue / 100);
 				} catch (err) {
 					showErrorToast(err);
 				}
@@ -480,16 +482,16 @@
 					const _zoomScale = parseFloat(zoomScale.value);
 
 					// 计算实际缩放比例
-					const _segmentLength = parseFloat(segmentLength.value);
-					const _displayActualLength = parseFloat(displayActualLength.value);
-					const actualZoomScale = (_segmentLength / _displayActualLength) * _zoomScale;
+					const segmentLengthValue = parseFloat(segmentLength.value);
+					const displayActualLengthValue = parseFloat(displayActualLength.value);
+					const actualZoomScale = (segmentLengthValue / displayActualLengthValue) * _zoomScale;
 
 					// 执行缩放
 					await eda.dmt_EditorControl.zoomTo(0, 0, actualZoomScale / 100);
 
 					// 显示结果
 					eda.sys_Message.showToastMessage(
-						`放置长度 ${_segmentLength.toFixed(2)} mm，显示长度 ${_displayActualLength.toFixed(2)} mm，原缩放比例为 ${_zoomScale.toFixed(2)}%，更改缩放比例为 ${actualZoomScale.toFixed(2)}%。`,
+						`放置长度 ${segmentLengthValue.toFixed(2)} mm，显示长度 ${displayActualLengthValue.toFixed(2)} mm，原缩放比例为 ${_zoomScale.toFixed(2)}%，更改缩放比例为 ${actualZoomScale.toFixed(2)}%。`,
 						ESYS_ToastMessageType.SUCCESS,
 					);
 				} catch (err) {
